--- a/mall-admin/src/main/resources/application.properties
+++ b/mall-admin/src/main/resources/application.properties
@@ -4,35 +4,35 @@ spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.druid.url=jdbc:mysql://10.0.93.60:3306/mall_demo?useUnicode=true&characterEncoding=utf8
 spring.datasource.druid.username=root
 spring.datasource.druid.password=123456
-#\u521D\u59CB\u5316\u5927\u5C0F
+#初始化连接池大小
 spring.datasource.druid.initial-size=1
-#\u6700\u5927\u6570\u91CF
+#最大连接
 spring.datasource.druid.max-active=20
-#\u94FE\u63A5\u8D85\u65F6\u65F6\u95F4
+#等待超时时间
 spring.datasource.druid.max-wait=30000
-#\u6700\u5C0F\u6570
+#最小连接
 spring.datasource.druid.min-idle=1
-#\uFFFD\uFFFD\uFFFD\uFFFD\u00FD\uFFFD\uFFFD\uFFFD\u04BB\uFFFD\u03BC\uFFFD\uFFFD \uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u04AA\uFFFD\u0631\u057F\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD \uFFFD\uFFFD\u03BB\uFFFD\uFFFD\uFFFD\uFFFD
+#隔多久进行一次检测 检测需要关闭空闲连接 单位毫秒
 spring.datasource.druid.time-between-eviction-runs-millis=50000
-#\u04BB\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u06B3\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u0421\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u02B1\uFFFD\uFFFD \uFFFD\uFFFD\u03BB\uFFFD\uFFFD\uFFFD\uFFFD
+#一个连接在池中最小的生存时间 单位毫秒
 spring.datasource.druid.min-evictable-idle-time-millis=50000
-# \uFFFD\uFFFD\u05A4\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u01F7\uFFFD\uFFFD\uFFFD\u0427
+#验证连接是否有效
 spring.datasource.druid.validation-query=select 1 from dual
-#\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u02B1\uFFFD\uFFFD\uFFFD\uFFFD\uFFFDtimeBetweenEvictionRunsMillis\uFFFD\uFFFD\uFFFD\uFFFD\u05B4\uFFFD\uFFFDvalidation-query\uFFFD\uFFFD\uFFFD\uFFFD\u01F7\uFFFD\uFFFD\uFFFD\u0427
+#如果空闲时间大于timeBetweenEvictionRunsMillis，则执行validation-query检测是否有效
 spring.datasource.druid.test-while-idle=true
-#\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u02B1\uFFFD\u01F7\uFFFD\uFFFD\uFFFD
+#申请连接时是否检测
 spring.datasource.druid.test-on-borrow=false
-#\uFFFD\u9EF9\uFFFD\uFFFD\uFFFD\uFFFD\u02B1\uFFFD\u01F7\uFFFD\uFFFD\uFFFD
+#归还连接时是否检测
 spring.datasource.druid.test-on-return=false
-#\uFFFD\uFFFDPsCache
+#打开PsCache
 spring.datasource.druid.pool-prepared-statements=true
-#\u05B8\uFFFD\uFFFDPsCache\uFFFD\uFFFD\u0421
+#指定PsCache大小
 spring.datasource.druid.max-pool-prepared-statement-per-connection-size=20
-#\uFFFD\uFFFD\uFFFD\u00FC\uFFFD\uFFFD\u0373\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u0635\uFFFDfilters \uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD \uFFFD\u07B7\uFFFD\u0373\uFFFD\u01BC\uFFFD\u063D\uFFFD\uFFFD\uFFFDsql
+#配置监控统计拦截的filters 若不配置 无法统计监控界面sql
 spring.datasource.druid.filters=stat,wall
-#\uFFFD\u03F2\uFFFD\uFFFD\uFFFD\uFFFDDruidDataSource\uFFFD\u013C\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD
+#合并多个DruidDataSource的监控数据
 spring.datasource.druid.use-global-data-source-stat=true
-#\u0368\uFFFD\uFFFDconnectProperties\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFDmergeSql\uFFFD\uFFFD\uFFFD\u0723\uFFFD\uFFFD\uFFFDSQL\uFFFD\uFFFD\u00BC
+#通过connectProperties属性来打开mergeSql功能；慢SQL记录
 spring.datasource.druid.connection-properties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
 #JPA
 spring.jpa.database=mysql
@@ -41,5 +41,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-#\u6587\u4EF6\u4E0A\u4F20\u8DEF\u5F84
+#文件上传路径
 upload.locations=d:/test
