添加权限和Security配置

--- a/mall-admin/src/main/resources/application.properties
+++ b/mall-admin/src/main/resources/application.properties
@@ -1,4 +1,6 @@
+
 server.port=2001
+spring.application.name=mall-admin
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.druid.url=jdbc:mysql://10.0.93.60:3306/mall_demo?useUnicode=true&characterEncoding=utf8
@@ -43,3 +45,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 #文件上传路径
 upload.locations=d:/test
+#security
+#spring.security.user.name=root
+#spring.security.user.password=123456
