--- a/mall-admin/src/main/resources/application.properties
+++ b/mall-admin/src/main/resources/application.properties
@@ -1,40 +1,40 @@
-
 server.port=2001
 spring.application.name=mall-admin
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.druid.url=jdbc:mysql://10.0.93.60:3306/mall_demo?useUnicode=true&characterEncoding=utf8
+#spring.datasource.druid.url=jdbc:mysql://10.0.93.60:3306/mall_demo?useUnicode=true&characterEncoding=utf8
+spring.datasource.druid.url=jdbc:mysql://localhost:3306/mall_demo?useUnicode=true&characterEncoding=utf8
 spring.datasource.druid.username=root
 spring.datasource.druid.password=123456
-#初始化连接池大小
+#\u521D\u59CB\u5316\u8FDE\u63A5\u6C60\u5927\u5C0F
 spring.datasource.druid.initial-size=1
-#最大连接
+#\u6700\u5927\u8FDE\u63A5
 spring.datasource.druid.max-active=20
-#等待超时时间
+#\u7B49\u5F85\u8D85\u65F6\u65F6\u95F4
 spring.datasource.druid.max-wait=30000
-#最小连接
+#\u6700\u5C0F\u8FDE\u63A5
 spring.datasource.druid.min-idle=1
-#隔多久进行一次检测 检测需要关闭空闲连接 单位毫秒
+#\u9694\u591A\u4E45\u8FDB\u884C\u4E00\u6B21\u68C0\u6D4B \u68C0\u6D4B\u9700\u8981\u5173\u95ED\u7A7A\u95F2\u8FDE\u63A5 \u5355\u4F4D\u6BEB\u79D2
 spring.datasource.druid.time-between-eviction-runs-millis=50000
-#一个连接在池中最小的生存时间 单位毫秒
+#\u4E00\u4E2A\u8FDE\u63A5\u5728\u6C60\u4E2D\u6700\u5C0F\u7684\u751F\u5B58\u65F6\u95F4 \u5355\u4F4D\u6BEB\u79D2
 spring.datasource.druid.min-evictable-idle-time-millis=50000
-#验证连接是否有效
+#\u9A8C\u8BC1\u8FDE\u63A5\u662F\u5426\u6709\u6548
 spring.datasource.druid.validation-query=select 1 from dual
-#如果空闲时间大于timeBetweenEvictionRunsMillis，则执行validation-query检测是否有效
+#\u5982\u679C\u7A7A\u95F2\u65F6\u95F4\u5927\u4E8EtimeBetweenEvictionRunsMillis\uFF0C\u5219\u6267\u884Cvalidation-query\u68C0\u6D4B\u662F\u5426\u6709\u6548
 spring.datasource.druid.test-while-idle=true
-#申请连接时是否检测
+#\u7533\u8BF7\u8FDE\u63A5\u65F6\u662F\u5426\u68C0\u6D4B
 spring.datasource.druid.test-on-borrow=false
-#归还连接时是否检测
+#\u5F52\u8FD8\u8FDE\u63A5\u65F6\u662F\u5426\u68C0\u6D4B
 spring.datasource.druid.test-on-return=false
-#打开PsCache
+#\u6253\u5F00PsCache
 spring.datasource.druid.pool-prepared-statements=true
-#指定PsCache大小
+#\u6307\u5B9APsCache\u5927\u5C0F
 spring.datasource.druid.max-pool-prepared-statement-per-connection-size=20
-#配置监控统计拦截的filters 若不配置 无法统计监控界面sql
+#\u914D\u7F6E\u76D1\u63A7\u7EDF\u8BA1\u62E6\u622A\u7684filters \u82E5\u4E0D\u914D\u7F6E \u65E0\u6CD5\u7EDF\u8BA1\u76D1\u63A7\u754C\u9762sql
 spring.datasource.druid.filters=stat,wall
-#合并多个DruidDataSource的监控数据
+#\u5408\u5E76\u591A\u4E2ADruidDataSource\u7684\u76D1\u63A7\u6570\u636E
 spring.datasource.druid.use-global-data-source-stat=true
-#通过connectProperties属性来打开mergeSql功能；慢SQL记录
+#\u901A\u8FC7connectProperties\u5C5E\u6027\u6765\u6253\u5F00mergeSql\u529F\u80FD\uFF1B\u6162SQL\u8BB0\u5F55
 spring.datasource.druid.connection-properties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
 #JPA
 spring.jpa.database=mysql
@@ -43,7 +43,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-#文件上传路径
+#\u6587\u4EF6\u4E0A\u4F20\u8DEF\u5F84
 upload.locations=d:/test
 #security
 #spring.security.user.name=root
