完成security单个模块登录

--- a/mall-admin/src/main/resources/application.properties
+++ b/mall-admin/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=2001
 spring.application.name=mall-admin
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.druid.url=jdbc:mysql://10.0.93.60:3306/mall_demo?useUnicode=true&characterEncoding=utf8
-spring.datasource.druid.url=jdbc:mysql://localhost:3306/mall_demo?useUnicode=true&characterEncoding=utf8
+spring.datasource.druid.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.druid.url=jdbc:mysql://10.0.93.60:3306/mall_demo?useUnicode=true&characterEncoding=utf8
+#spring.datasource.druid.url=jdbc:mysql://localhost:3306/mall_demo?useUnicode=true&characterEncoding=utf8
 spring.datasource.druid.username=root
 spring.datasource.druid.password=123456
 #\u521D\u59CB\u5316\u8FDE\u63A5\u6C60\u5927\u5C0F
@@ -48,3 +48,8 @@ upload.locations=d:/test
 #security
 #spring.security.user.name=root
 #spring.security.user.password=123456
+auth-server=http://localhost:2001/auth
+security.oauth2.client.client-id=client
+security.oauth2.client.client-secret=secret
+security.oauth2.client.access-token-uri=${auth-server}/oauth/token
+security.oauth2.client.user-authorization-uri=${auth-server}/oauth/authorize
