--- a/mall-market/src/main/resources/application.yml
+++ b/mall-market/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 server:
   port: 2002
+#  servlet:
+#    context-path: /content
 
 spring:
   application:
@@ -8,7 +10,8 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
     druid:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://10.0.93.60:3306/mall_demo?useUnicode=true&characterEncoding=utf8
+      #      url: jdbc:mysql://10.0.93.60:3306/mall_demo?useUnicode=true&characterEncoding=utf8
+      url: jdbc:mysql://localhost:3306/mall_demo?useUnicode=true&characterEncoding=utf8
       username: root
       password: 123456
       initial-size: 1
@@ -34,11 +37,13 @@ spring:
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
 
 #security
-auth-server: http://localhost:2001/auth
+auth-server: http://localhost:2001/oauth
 security:
   oauth2:
     client:
       client-id: client
       client-secret: secret
-      access-token-uri: ${auth-server}/oauth/token
-      user-authorization-uri: ${auth-server}/oauth/authorize
+      access-token-uri: ${auth-server}/token
+      user-authorization-uri: ${auth-server}/authorize
+    resource:
+      token-info-uri: ${auth-server}/check_token
