--- a/mall-admin/pom.xml
+++ b/mall-admin/pom.xml
@@ -14,7 +14,7 @@
     <artifactId>mall-admin</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>mall-admin</name>
-    <description>商城登录管理模块</description>
+    <description>mall-admin</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -34,11 +34,6 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
         <!--OAUTH2-->
-        <!--<dependency>-->
-        <!--<groupId>org.springframework.security.oauth</groupId>-->
-        <!--<artifactId>spring-security-oauth2</artifactId>-->
-        <!--<version>2.3.3.RELEASE</version>-->
-        <!--</dependency>-->
         <dependency>
             <groupId>org.springframework.security.oauth.boot</groupId>
             <artifactId>spring-security-oauth2-autoconfigure</artifactId>
