--- a/mall-admin/src/main/resources/application.properties
+++ b/mall-admin/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port=2001
 spring.application.name=mall-admin
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.druid.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.druid.url=jdbc:mysql://10.0.93.60:3306/mall_demo?useUnicode=true&characterEncoding=utf8
-spring.datasource.druid.url=jdbc:mysql://localhost:3306/mall_demo?useUnicode=true&characterEncoding=utf8
+spring.datasource.druid.url=jdbc:mysql://10.0.93.60:3306/mall_demo?useUnicode=true&characterEncoding=utf8
+#spring.datasource.druid.url=jdbc:mysql://localhost:3306/mall_demo?useUnicode=true&characterEncoding=utf8
 spring.datasource.druid.username=root
 spring.datasource.druid.password=123456
 #\u521D\u59CB\u5316\u8FDE\u63A5\u6C60\u5927\u5C0F
@@ -40,16 +40,25 @@ spring.datasource.druid.connection-properties=druid.stat.mergeSql=true;druid.sta
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+#redis
+spring.redis.database=0
+spring.redis.port=6379
+spring.redis.host=10.0.93.60
+spring.redis.password=
+spring.redis.timeout=5000ms
+spring.redis.jedis.pool.min-idle=0
+spring.redis.jedis.pool.max-idle=8
+spring.redis.jedis.pool.max-wait=-1ms
+spring.redis.jedis.pool.max-active=8
 #\u6587\u4EF6\u4E0A\u4F20\u8DEF\u5F84
 upload.locations=d:/test
 #security
 #spring.security.user.name=root
 #spring.security.user.password=123456
-auth-server=http://localhost:2001/auth
+auth-server=http://localhost:2001/oauth
 security.oauth2.client.client-id=client
 security.oauth2.client.client-secret=secret
-security.oauth2.client.access-token-uri=${auth-server}/oauth/token
-security.oauth2.client.user-authorization-uri=${auth-server}/oauth/authorize
+security.oauth2.client.access-token-uri=${auth-server}/token
+security.oauth2.client.user-authorization-uri=${auth-server}/authorize
