--- a/mall-market/pom.xml
+++ b/mall-market/pom.xml
@@ -38,6 +38,12 @@
             <version>2.1.3.RELEASE</version>
         </dependency>
 
+        <!-- rabbitmq -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
