--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
             <scope>test</scope>
         </dependency>
 
+        <!--ES-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+        </dependency>
 
         <!--SWAGGER-->
         <dependency>
