--- a/mall-market/pom.xml
+++ b/mall-market/pom.xml
@@ -37,13 +37,16 @@
             <artifactId>spring-security-oauth2-autoconfigure</artifactId>
             <version>2.1.3.RELEASE</version>
         </dependency>
-
         <!-- rabbitmq -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
-
+        <!--ES-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
